--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS_FlexBox</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+<header class="header">
+  <h1>CSS FlexBox Photo Gallery</h1>
+</header>
+<div class="galeria">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+</div>
 
 <body>
-  
+
 </body>
 
 </html>
