--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
   <h1>CSS FlexBox Photo Gallery</h1>
 </header>
 <div class="galeria">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
-</div>
-
-<body>
-
-</body>
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat_1">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="cat_2">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="cat_3">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="cat_4">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="cat_5">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="cat_6">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="cat_7">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="cat_8">
+  <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="cat_9">
+  </div8 <body8 </bod8>
 
 </html>
