--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <header class="header">
-  <h1>CSS FlexBox Photo Gallery</h1>
+  <h1>CSS FlexBox Cats in Photo Gallery</h1>
 </header>
 <div class="galeria">
   <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat_1">
